--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contador de Calorias</title>
+  <title>Hey Calorie!</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <!-- Adicione o SheetJS aqui -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>🍎 CalorieCounter</h1>
-      <p>Seu ajudante fofo para uma vida saudável!</p>
+      <h1>🍎 Hey Calorie!</h1>
+      <p>Contador de Calorias</p>
       <button id="themeToggle"><i class="fas fa-moon"></i> Tema Escuro</button>
     </header>
 
@@ -40,7 +39,7 @@
     </div>
 
     <footer>
-      <p>Feito com ❤️ por você!</p>
+      <p>Feito com ❤️ por Isabela Nardi</p>
     </footer>
   </div>
 
