--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="section">
       <h2><i class="fas fa-utensils"></i> Calorias Consumidas</h2>
       <input type="text" id="foodInput" placeholder="Ex: frango grelhado">
-      <input type="number" id="foodQuantity" placeholder="Quantidade (em gramas)">
+      <input type="number" id="foodQuantity" placeholder="Quantidade (em gramas ou ml)">
       <button id="foodButton"><i class="fas fa-calculator"></i> Calcular Calorias</button>
       <p id="foodResult"></p>
       <p id="lipidiosResult"></p>
