--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Seção de Exercícios -->
     <div class="section">
       <h2><i class="fas fa-running"></i> Calorias Gastas</h2>
-      <input type="text" id="exerciseInput" placeholder="Ex: corrida">
+      <input type="text" id="exerciseInput" placeholder="Ex: caminhada">
       <input type="number" id="exerciseDuration" placeholder="Duração (em minutos)">
       <button id="exerciseButton"><i class="fas fa-calculator"></i> Calcular Calorias Gastas</button>
       <p id="exerciseResult"></p>
