--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,33 +14,33 @@
   <div class="container">
     <header>
       <h1>🍎 Hey Calorie!</h1>
-      <p>Contador de Calorias</p>
-      <button id="themeToggle"><i class="fas fa-moon"></i> Tema Escuro</button>
+      <p>Calorie Counter</p>
+      <button id="themeToggle"><i class="fas fa-moon"></i> Dark Theme</button>
     </header>
 
-    <!-- Seção de Alimentos -->
+    <!-- Food Section -->
     <div class="section">
-      <h2><i class="fas fa-utensils"></i> Calorias Consumidas</h2>
-      <input type="text" id="foodInput" placeholder="Ex: frango grelhado">
-      <input type="number" id="foodQuantity" placeholder="Quantidade (em gramas ou ml)">
-      <button id="foodButton"><i class="fas fa-calculator"></i> Calcular Calorias</button>
+      <h2><i class="fas fa-utensils"></i> Calories Consumed</h2>
+      <input type="text" id="foodInput" placeholder="E.g.: grilled chicken">
+      <input type="number" id="foodQuantity" placeholder="Quantity (in grams or ml)">
+      <button id="foodButton"><i class="fas fa-calculator"></i> Calculate Calories</button>
       <p id="foodResult"></p>
       <p id="lipidiosResult"></p>
       <p id="proteinasResult"></p>
       <p id="carboidratosResult"></p>
     </div>
 
-    <!-- Seção de Exercícios -->
+    <!-- Exercise Section -->
     <div class="section">
-      <h2><i class="fas fa-running"></i> Calorias Gastas</h2>
-      <input type="text" id="exerciseInput" placeholder="Ex: caminhada">
-      <input type="number" id="exerciseDuration" placeholder="Duração (em minutos)">
-      <button id="exerciseButton"><i class="fas fa-calculator"></i> Calcular Calorias Gastas</button>
+      <h2><i class="fas fa-running"></i> Calories Burned</h2>
+      <input type="text" id="exerciseInput" placeholder="E.g.: walking">
+      <input type="number" id="exerciseDuration" placeholder="Duration (in minutes)">
+      <button id="exerciseButton"><i class="fas fa-calculator"></i> Calculate Calories Burned</button>
       <p id="exerciseResult"></p>
     </div>
 
     <footer>
-      <p>Feito com ❤️ por Isabela Nardi</p>
+      <p>Made with ❤️ by Isabela Nardi</p>
     </footer>
   </div>
 
