--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <footer>
       <p>Made with ❤️ by Isabela Nardi</p>
+      <p>Data from Open Food Facts database</p>
     </footer>
   </div>
 
