--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <h2><i class="fas fa-running"></i> Calories Burned</h2>
       <input type="text" id="exerciseInput" placeholder="E.g.: walking">
       <input type="number" id="exerciseDuration" placeholder="Duration (in minutes)">
+      <input type="number" id="weightInput" placeholder="Your weight in kg (optional)">
       <button id="exerciseButton"><i class="fas fa-calculator"></i> Calculate Calories Burned</button>
       <p id="exerciseResult"></p>
     </div>
