--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <footer>
       <p>Made with ❤️ by Isabela Nardi</p>
-      <p>Data from Open Food Facts database</p>
+      <p>Data from <a href="https://world.openfoodfacts.org/">Open Food Facts</a></p>
     </footer>
   </div>
 
