--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <h2><i class="fas fa-utensils"></i> Calories Consumed</h2>
       <input type="text" id="foodInput" placeholder="E.g.: grilled chicken">
       <input type="number" id="foodQuantity" placeholder="Quantity (in grams or ml)">
+      <input type="text" id="foodInput" placeholder="Enter food name">
+      <div id="foodSuggestions" class="suggestions-container"></div>
       <button id="foodButton"><i class="fas fa-calculator"></i> Calculate Calories</button>
       <p id="foodResult"></p>
       <p id="lipidiosResult"></p>
